# tg-chat-parser

./: .coverage  .gitignore  AUTH_INSTRUCTIONS.md  CONSOLE_OUTPUT.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  audit_plan.md  audit_report.md  check_api_status.py  main.py  pyproject.toml  refactoring.md  refactoring_plan.md  requirements.txt  setup.sh  test_google_auth.py
src/: app.py  cli.py  config.py  docx_client.py  tg_client.py  utils.py
tests/: test_app.py  test_cli.py  test_config.py  test_docx_client.py  test_e2e.py  test_tg_client.py  test_utils.py
